--- a/styles.css
+++ b/styles.css
@@ -19,13 +19,13 @@ body {
 
 .section {
     width: 100%;
-    padding: 20px;
+    padding: 40px 20px;
     min-height: clamp(25vh, 100vh, 150vh);
     background-image: linear-gradient(#2B2B2B, #1e1e1e );
 }
 
 .order-section {
-    padding: 50px 5px 75px 5px;
+    padding: 50px 15px 75px 15px;
 }
 
 .main-page .section:nth-child(2) {
@@ -44,7 +44,7 @@ body {
 
 
 #order-now {
-    background-image: linear-gradient(#1e1e1e, #2B2B2B);
+    background: linear-gradient(#1e1e1e, #2B2B2B);
     
 }
 
@@ -73,7 +73,7 @@ h2 {
 
 #key-features {
     margin: 30px 2px 2px 2px;
-    padding: 10px;
+    padding: 20px 10px;
 }
 
 #custom-styling span {
@@ -153,22 +153,24 @@ li + p {
     position: relative;
     margin: 0;
     padding: 0;
-    height: 200px;
+    height: 300px;
 }
 
 .top-nav-bar a {
     border: 5px solid rgba(0, 0, 0, 0.338);
     margin: 8px 10px;
     background-color: #474747;
-    border-radius: 20px;
-    max-width: 40%;
+    border-radius: 18px;
+    max-width: 35%;
+    z-index: 3;
 }
 
 .top-nav-bar {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    width: 90%;
+    width: 95%;
+    min-height: 125px;
     background-color: #C19A6B;
     font-size: 1.5rem;
     position: sticky;
@@ -197,4 +199,16 @@ a {
 
 .black-belt-image {
     margin-top: 80px;
+}
+
+.hz-belt {
+    max-height: 125px;
+    position: absolute;
+    left: 134px;
+    top: -9px;
+    z-index: 1;
+}
+
+.bv-title-h1 {
+    margin: 10px;
 }
